Better phone compatibility

--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -52,11 +52,14 @@ import { SITE_TITLE } from '../consts';
 		text-wrap: wrap;
 	}
 	@media (max-width: 960px) {
+		nav a {
+			padding: 0.8em 0.5em;
+		}
 		.internal-title {
 			display: none;
 		}
 		.offset {
-			padding-bottom: 4rem;
+			padding-bottom: 3.5rem;
 		}
 	}
 </style>
